cmake_minimum_required(VERSION 3.21)
project(Code_practice C)

set(CMAKE_C_STANDARD 11)

add_executable(Code_practice
        Beginner_Coder/1291.c
        Beginner_Coder/1303.c
        Beginner_Coder/1304.c
        Beginner_Coder/1307.c
        Beginner_Coder/1314.c
        Beginner_Coder/1338.c
        Beginner_Coder/1339.c
        Beginner_Coder/1341.c
        Beginner_Coder/1856.c
        Beginner_Coder/2046.c)
